--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.5",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-content-loader": "^4.2.2",
