--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.5",
     "axios": "^0.19.0",
+    "clsx": "^1.0.4",
     "date-fns": "^2.0.0-beta.5",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-content-loader": "^4.2.2",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.4",
     "redux": "^4.0.4"
   },
   "scripts": {
